# nice_gui_ros2

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  ros_entrypoint.sh
nice_gui_core/: package.xml  setup.cfg  setup.py
nice_gui_core/config/: default.yaml
nice_gui_core/config/cards/: cartesian_control_card.yaml  cartesian_trajectory_control_card.yaml  image_card.yaml  joint_control_card.yaml  precision_experiment_card.yaml  weed_removal_card.yaml
nice_gui_core/launch/: nice_gui_core.launch.py
nice_gui_core/nice_gui_core/: ui.py
nice_gui_core/nice_gui_core/action_clients/: __init__.py  action_client.py
nice_gui_core/nice_gui_core/cards/: card.py
nice_gui_core/nice_gui_core/logger/: __init__.py  logger.py  logger_adapter.py  ros_logger.py  ros_ui_logger.py  ui_logger.py
nice_gui_core/nice_gui_core/pages/: __init__.py  page_with_cards.py
nice_gui_core/nice_gui_core/service_clients/: __init__.py  service_client.py
nice_gui_core/nice_gui_core/state_machines/: __init__.py  state_machine.py
nice_gui_core/nice_gui_core/state_machines/utils/: __init__.py  state_wait.py
nice_gui_core/nice_gui_core/ui_elements/: __init__.py  btn_action_start_stop.py  slider.py
nice_gui_core/nice_gui_core/utils/: __init__.py  client_handler.py  emergency_stop_handler.py  parameter.py  plugin_loader.py  subscriber_handler.py  ui_notification_handler.py
nice_gui_core_plugins/: README.md  package.xml  setup.cfg  setup.py
nice_gui_core_plugins/config/: battery_state_card.yaml  control_card.yaml  diagnostic_card.yaml  gps_info_card.yaml  grid_visualization_card.yaml  image_card.yaml  link_card.yaml  odometry_card.yaml  scene_card.yaml
nice_gui_core_plugins/nice_gui_core_plugins/action_clients/: __init__.py
nice_gui_core_plugins/nice_gui_core_plugins/cards/: __init__.py  battery_state_card.py  control_card.py  diagnostic_card.py  gps_info_card.py  grid_visualization_card.py  image_card.py  link_card.py  odometry_card.py  scene_card.py
nice_gui_core_plugins/nice_gui_core_plugins/service_clients/: __init__.py
nice_gui_core_plugins/nice_gui_core_plugins/utils/: __init__.py  (+7 more)
nice_gui_examples/: package.xml  setup.cfg  setup.py
nice_gui_examples/config/: default.yaml
nice_gui_examples/launch/: nice_gui.launch.py
(+6 files in other folders)
