<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nice_gui_core</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="tschuette@atb-potsdam.de">ros</maintainer>
  <maintainer email="dsuhr@atb-potsdam.de">ros</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>bag_recorder_msgs</exec_depend>
  <exec_depend>opennav_coverage_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>jaetrobi_controller_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <!-- <exec_depend>pyserial</exec_depend> -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
